# MMFAllocator

./: .gitignore  CMakeLists.txt  README.md
include/mmf_allocator/: MMFAllocator.hpp
tests/: CMakeLists.txt  MMFAllocatorTest.cpp
